--- a/index.html
+++ b/index.html
@@ -1,111 +1,151 @@
 <!DOCTYPE html>
 <html lang="ja">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>ページタイトル</title>
+    <meta name="description" content="ページの説明" />
+    <meta name="format-detection" content="telephone=no" />
 
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>ページタイトル</title>
-  <meta name="description" content="ページの説明" />
-  <meta name="format-detection" content="telephone=no" />
-
-  <!-- favicon/webclipicon -->
-  <!-- <link rel="icon" href="favicon.ico" />
+    <!-- favicon/webclipicon -->
+    <!-- <link rel="icon" href="favicon.ico" />
     <link rel="icon" href="favicon.svg" type="image/svg+xml" />
     <link rel="apple-touch-icon" href="webclip.png" /> -->
 
-  <!-- ogp -->
-  <meta property="og:site_name" content="サイト名" />
-  <meta property="og:url" content="URL" />
-  <meta property="og:type" content="website or article" />
-  <meta property="og:title" content="ページのタイトル" />
-  <meta property="og:description" content="ページの説明" />
-  <meta property="og:image" content="URL" />
-  <meta property="og:locale" content="ja_JP" />
-  <!-- <meta property="fb:app_id" content="AppID"> -->
-  <meta name="twitter:card" content="summary_large_image or summary" />
-  <!-- <meta name="twitter:site" content="@moshamusha2010" /> -->
-  <meta name="twitter:description" content="ページの説明" />
-  <meta name="twitter:image:src" content="URL" />
+    <!-- ogp -->
+    <meta property="og:site_name" content="サイト名" />
+    <meta property="og:url" content="URL" />
+    <meta property="og:type" content="website or article" />
+    <meta property="og:title" content="ページのタイトル" />
+    <meta property="og:description" content="ページの説明" />
+    <meta property="og:image" content="URL" />
+    <meta property="og:locale" content="ja_JP" />
+    <!-- <meta property="fb:app_id" content="AppID"> -->
+    <meta name="twitter:card" content="summary_large_image or summary" />
+    <!-- <meta name="twitter:site" content="@moshamusha2010" /> -->
+    <meta name="twitter:description" content="ページの説明" />
+    <meta name="twitter:image:src" content="URL" />
 
-  <!-- fonts -->
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap" rel="stylesheet" />
+    <!-- fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
 
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
 
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
-    rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
 
-  <link rel="preconnect" href="https://fonts.googleapis.com" />
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link
-    href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
-    rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+      rel="stylesheet"
+    />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
 
-  <!-- css -->
-  <base href="./assets/" />
-  <link rel="stylesheet" href="css/import.css" />
+    <!-- css -->
+    <base href="./assets/" />
+    <link rel="stylesheet" href="css/import.css" />
 
-  <!-- js -->
-  <!-- Alpine -->
-  <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
-  <script src="js/jquery-3.7.1.min.js" defer></script>
-  <script src="js/jquery-migrate.min.js" defer></script>
-  <script src="js/slick.min.js" defer></script>
-  <script src="js/common.js" defer></script>
-  <script>
-    (function(d) {
-      var config = {
-        kitId: 'dfl0cwg',
-        scriptTimeout: 3000,
-        async: true
-      },
-      h=d.documentElement,t=setTimeout(function(){h.className=h.className.replace(/\bwf-loading\b/g,"")+" wf-inactive";},config.scriptTimeout),tk=d.createElement("script"),f=false,s=d.getElementsByTagName("script")[0],a;h.className+=" wf-loading";tk.src='https://use.typekit.net/'+config.kitId+'.js';tk.async=true;tk.onload=tk.onreadystatechange=function(){a=this.readyState;if(f||a&&a!="complete"&&a!="loaded")return;f=true;clearTimeout(t);try{Typekit.load(config)}catch(e){}};s.parentNode.insertBefore(tk,s)
-    })(document);
-  </script>
-</head>
+    <!-- js -->
+    <!-- Alpine -->
+    <script
+      defer
+      src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"
+    ></script>
+    <script src="js/jquery-3.7.1.min.js" defer></script>
+    <script src="js/jquery-migrate.min.js" defer></script>
+    <script src="js/slick.min.js" defer></script>
+    <script src="js/common.js" defer></script>
+    <script>
+      (function (d) {
+        var config = {
+            kitId: "dfl0cwg",
+            scriptTimeout: 3000,
+            async: true,
+          },
+          h = d.documentElement,
+          t = setTimeout(function () {
+            h.className =
+              h.className.replace(/\bwf-loading\b/g, "") + " wf-inactive";
+          }, config.scriptTimeout),
+          tk = d.createElement("script"),
+          f = false,
+          s = d.getElementsByTagName("script")[0],
+          a;
+        h.className += " wf-loading";
+        tk.src = "https://use.typekit.net/" + config.kitId + ".js";
+        tk.async = true;
+        tk.onload = tk.onreadystatechange = function () {
+          a = this.readyState;
+          if (f || (a && a != "complete" && a != "loaded")) return;
+          f = true;
+          clearTimeout(t);
+          try {
+            Typekit.load(config);
+          } catch (e) {}
+        };
+        s.parentNode.insertBefore(tk, s);
+      })(document);
+    </script>
+  </head>
 
-<body>
-  <section class="accordion-con">
-    <div class="sec-con">
-      <h2 class="accordion-heading">よくあるご質問</h2>
-    <p class="sub-heading">Question</p>
-    <div class="accordion-blk">
-      <div class="accordion-title"><span>Q</span><h3>採用にはどれくらい時間がかかりますか？</h3></div>
-      <div class="accordion-content"><span>A</span><p>技能実習1号→2号だと計3年間、3号まで行くと追加で2年間です。</p></div>
-    </div>
-    <div class="accordion-blk">
-      <div class="accordion-title"><span>Q</span><h3>外国人は何人まで採用できますか？</h3></div>
-      <div class="accordion-content"><span>A</span><p>技能実習1号→2号だと計3年間、3号まで行くと追加で2年間です。</p></div>
-    </div>
-    <div class="accordion-blk">
-      <div class="accordion-title"><span>Q</span><h3>実習生は何年間仕事をすることができますか？</h3></div>
-      <div class="accordion-content"><span>A</span><p>技能実習1号→2号だと計3年間、3号まで行くと追加で2年間です。</p></div>
-    </div>
-      <!-- <div class="accordion-blk">
-        <h3 class="accordion-title">外国人は何人まで採用できますか？</h3>
-      <div class="accordion-content">技能実習1号→2号だと計3年間、3号まで行くと追加で2年間です。</div>
+  <body>
+    <section class="accordion-con">
+      <div class="sec-con">
+        <h2 class="accordion-heading">よくあるご質問</h2>
+        <p class="sub-heading">Question</p>
+        <div class="accordion-blk">
+          <div class="accordion-title">
+            <span>Q</span>
+            <h3>採用にはどれくらい時間がかかりますか？</h3>
+          </div>
+          <div class="accordion-content">
+            <span>A</span>
+            <p>技能実習1号→2号だと計3年間、3号まで行くと追加で2年間です。</p>
+          </div>
+        </div>
+        <div class="accordion-blk">
+          <div class="accordion-title">
+            <span>Q</span>
+            <h3>外国人は何人まで採用できますか？</h3>
+          </div>
+          <div class="accordion-content">
+            <span>A</span>
+            <p>技能実習1号→2号だと計3年間、3号まで行くと追加で2年間です。</p>
+          </div>
+        </div>
+        <div class="accordion-blk">
+          <div class="accordion-title">
+            <span>Q</span>
+            <h3>実習生は何年間仕事をすることができますか？</h3>
+          </div>
+          <div class="accordion-content">
+            <span>A</span>
+            <p>技能実習1号→2号だと計3年間、3号まで行くと追加で2年間です。</p>
+          </div>
+        </div>
+        <a href="#" class="btn">よくあるご質問まとめ</a>
       </div>
-    
-    <div class="accordion-blk">
-      <h3 class="accordion-title">実習生は何年間仕事をすることができますか？</h3>
-    <div class="accordion-content">技能実習1号→2号だと計3年間、3号まで行くと追加で2年間です。</div>
-    </div> -->
-    <a href="#" class="btn">よくあるご質問まとめ</a> 
-    </div>
-    
-  </section>
-  
-</body>
-
+    </section>
+  </body>
 </html>
