--- a/index.html
+++ b/index.html
@@ -401,10 +401,8 @@
 
       </div>
       <!-- tab4 -->
-
-
           </div>
-          <a href="#" class="btn">新着情報一覧を見る<span></span></a>
+          <a href="#" class="btn"><span class="txt">新着情報一覧を見る</span><span class="circle"></span></a>
         </div>
       </div>
     </div>
