--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
                 </div>
                 <div class="second-content">
                   <div class="fir-txt">
-                    <img src="./img/icon_train.png" alt="">
+                    <p class="date">開催日</p>
+                    <!-- <img src="./img/icon_train.png" alt=""> -->
                     <p>2024年06月14日、17日～19日及び07月19日、20日</p>
                   </div>
                   <div>
@@ -110,7 +111,8 @@
               </div>
               <div class="second-content">
                 <div class="fir-txt">
-                  <img src="./img/icon_train.png" alt="">
+                  <p class="date">開催日</p>
+                  <!-- <img src="./img/icon_train.png" alt=""> -->
                   <p>2024年7月22日、29日、8月5日、19日</p>
                 </div>
                 <div>
@@ -127,7 +129,8 @@
             </div>
             <div class="second-content">
               <div class="fir-txt">
-                <img src="./img/icon_train.png" alt="">
+                <p class="date">開催日</p>
+                <!-- <img src="./img/icon_train.png" alt=""> -->
                 <p>2024年7月22日、29日、8月5日、19日</p>
               </div>
               <div>
